; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/smbfs/extr_proc.c_smb_encode_path.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/smbfs/extr_proc.c_smb_encode_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smb_sb_info = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.dentry = type { i32 }
%struct.qstr = type { i32 }

@SMB_PROTOCOL_COREPLUS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.smb_sb_info*, i8*, i32, %struct.dentry*, %struct.qstr*)* @smb_encode_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smb_encode_path(%struct.smb_sb_info* %0, i8* %1, i32 %2, %struct.dentry* %3, %struct.qstr* %4) #0 {
  %6 = alloca %struct.smb_sb_info*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.dentry*, align 8
  %10 = alloca %struct.qstr*, align 8
  %11 = alloca i32, align 4
  store %struct.smb_sb_info* %0, %struct.smb_sb_info** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.dentry* %3, %struct.dentry** %9, align 8
  store %struct.qstr* %4, %struct.qstr** %10, align 8
  %12 = load %struct.smb_sb_info*, %struct.smb_sb_info** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load %struct.dentry*, %struct.dentry** %9, align 8
  %16 = load %struct.qstr*, %struct.qstr** %10, align 8
  %17 = call i32 @smb_build_path(%struct.smb_sb_info* %12, i8* %13, i32 %14, %struct.dentry* %15, %struct.qstr* %16)
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* %11, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %5
  br label %33

21:                                               ; preds = %5
  %22 = load %struct.smb_sb_info*, %struct.smb_sb_info** %6, align 8
  %23 = getelementptr inbounds %struct.smb_sb_info, %struct.smb_sb_info* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @SMB_PROTOCOL_COREPLUS, align 8
  %27 = icmp sle i64 %25, %26
  br i1 %27, label %28, label %32

28:                                               ; preds = %21
  %29 = load i8*, i8** %7, align 8
  %30 = load i32, i32* %11, align 4
  %31 = call i32 @str_upper(i8* %29, i32 %30)
  br label %32

32:                                               ; preds = %28, %21
  br label %33

33:                                               ; preds = %32, %20
  %34 = load i32, i32* %11, align 4
  ret i32 %34
}

declare dso_local i32 @smb_build_path(%struct.smb_sb_info*, i8*, i32, %struct.dentry*, %struct.qstr*) #1

declare dso_local i32 @str_upper(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
